# industrial-edge-monitoring-platform

./: .gitignore  CHANGELOG.md  README.md
.github/workflow/: backend-ci.yml
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api_router.py
backend/app/api/v1/routers/: health.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  middleware.py
backend/app/schemas/: common.py
backend/tests/api/: test_correlation_id.py  test_exception_handlers.py  test_health.py  test_request_logging.py  test_security_headers.py
backend/tests/unit/: test_config.py  test_logging.py
docs/: 01-project-charter.md
docs/architecture/: 01-high-level-architecture.md
docs/architecture/adr/: ADR-001-use-modular-monorepo.md  ADR-002-use-layered-architecture.md  README.md
docs/design/: 01-backend-low-level-design.md  02-coding-standards-and-git-workflow.md
docs/requirements/: 01-business-requirements.md  02-functional-requirements.md  03-non-functional-requirements.md
infrastructure/docker-compose/: docker-compose.yml
